// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch matches forest theme snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 12,
      "opacity": NaN,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      onBlur={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        accessibilityRole="switch"
        accessibilityState={
          {
            "busy": false,
            "checked": true,
            "disabled": true,
          }
        }
        accessible={true}
        focusVisibleStyle={
          {
            "outlineColor": "#22C55E66",
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        id="_r_15_"
        style={
          {
            "backgroundColor": "#22C55E",
            "borderBottomColor": "#22C55E",
            "borderBottomLeftRadius": 1000,
            "borderBottomRightRadius": 1000,
            "borderBottomWidth": 1,
            "borderLeftColor": "#22C55E",
            "borderLeftWidth": 1,
            "borderRightColor": "#22C55E",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#22C55E",
            "borderTopLeftRadius": 1000,
            "borderTopRightRadius": 1000,
            "borderTopWidth": 1,
            "flexDirection": "column",
            "height": 23,
            "minHeight": 23,
            "width": 46,
          }
        }
        tabIndex={0}
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "stretch",
              "flex": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "backgroundColor": "#14281A",
                "borderBottomLeftRadius": 1000,
                "borderBottomRightRadius": 1000,
                "borderTopLeftRadius": 1000,
                "borderTopRightRadius": 1000,
                "flexDirection": "column",
                "height": 23,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
                "width": 23,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Switch matches midnight theme snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 12,
      "opacity": 1,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      onBlur={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        accessibilityRole="switch"
        accessibilityState={
          {
            "busy": false,
            "checked": false,
            "disabled": false,
          }
        }
        accessible={true}
        focusVisibleStyle={
          {
            "outlineColor": "#8B5CF666",
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        id="_r_q_"
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#18181B",
            "borderBottomColor": "#27272A",
            "borderBottomLeftRadius": 1000,
            "borderBottomRightRadius": 1000,
            "borderBottomWidth": 1,
            "borderLeftColor": "#27272A",
            "borderLeftWidth": 1,
            "borderRightColor": "#27272A",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#27272A",
            "borderTopLeftRadius": 1000,
            "borderTopRightRadius": 1000,
            "borderTopWidth": 1,
            "flexDirection": "column",
            "height": 23,
            "minHeight": 23,
            "width": 46,
          }
        }
        tabIndex={0}
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "stretch",
              "flex": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#FAFAFA",
                "borderBottomLeftRadius": 1000,
                "borderBottomRightRadius": 1000,
                "borderTopLeftRadius": 1000,
                "borderTopRightRadius": 1000,
                "flexDirection": "column",
                "height": 23,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
                "width": 23,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Switch matches sunrise theme snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 12,
      "opacity": 1,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      onBlur={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        accessibilityRole="switch"
        accessibilityState={
          {
            "busy": false,
            "checked": true,
            "disabled": false,
          }
        }
        accessible={true}
        focusVisibleStyle={
          {
            "outlineColor": "#F59E0B66",
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        id="_r_f_"
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#F59E0B",
            "borderBottomColor": "#F59E0B",
            "borderBottomLeftRadius": 1000,
            "borderBottomRightRadius": 1000,
            "borderBottomWidth": 1,
            "borderLeftColor": "#F59E0B",
            "borderLeftWidth": 1,
            "borderRightColor": "#F59E0B",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#F59E0B",
            "borderTopLeftRadius": 1000,
            "borderTopRightRadius": 1000,
            "borderTopWidth": 1,
            "flexDirection": "column",
            "height": 23,
            "minHeight": 23,
            "width": 46,
          }
        }
        tabIndex={0}
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "stretch",
              "flex": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "backgroundColor": "#271F15",
                "borderBottomLeftRadius": 1000,
                "borderBottomRightRadius": 1000,
                "borderTopLeftRadius": 1000,
                "borderTopRightRadius": 1000,
                "flexDirection": "column",
                "height": 23,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
                "width": 23,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
